--- a/header.html
+++ b/header.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Belajar Git Github</title>
+    <title>Belajar Push Staging</title>
   </head>
   <body>
-    <h1>Belajar Clone Repo From GitHub</h1>
+    <h1>Belajar Push Staging</h1>
   </body>
 </html>
